Fixed Modals getting moved to the top and being partly outside the visible screen on mobile devices

--- a/client/src/components/Modal/styling.css
+++ b/client/src/components/Modal/styling.css
@@ -14,8 +14,8 @@
 
 .Modal {
   background-color: white;
-  max-width: calc(100vw - 32px);
-  max-height: calc(100vh - 32px);
+  max-width: calc(100% - 32px);
+  max-height: calc(100% - 32px);
   flex: 0 0 auto;
   overflow: hidden;
   border-radius: 2px;
